--- a/Main.css
+++ b/Main.css
@@ -115,7 +115,7 @@ body{
 
 #logo{
   text-align: center;
-  padding-top:0;
+  padding-top:10%;
   background-color: black;
   position:fixed;
   top:0px;
