--- a/Main.css
+++ b/Main.css
@@ -6,6 +6,13 @@
     font-family: sans-serif;
   }
   
+  a{
+    color: antiquewhite;
+    text-decoration: none;
+    user-select: none;
+
+    transition: 0.5s;
+  }
   
   .banner{
     width:100%;
@@ -116,4 +123,8 @@ button:hover span{
 button:hover{
     color: black;
     border: none;
+}
+
+button:hover a{
+  color: black;
 }
