--- a/contact.css
+++ b/contact.css
@@ -4,6 +4,25 @@
     border: 0;
 }
 
+a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    user-select: none;
+
+    transition: 0.5s;
+    font-size: 2vh;
+    text-transform: uppercase;
+}
+
+a:hover{
+    color: black;
+}
+
+li{
+    list-style: none;
+}
+
+
 body{
     background-color: #F1F1F1;
     font-family: "Abel", sans-serif;
@@ -16,13 +35,34 @@ body{
   }
   
 
+.menu{
+    position: relative;
+    width: 0vw;
+    display: flex;
+    gap: 1vw;
+}
+
 .topbar{
     background-color: white;
     width: 100vw;
-    height: 3vh;
+    height: 8vh;
     position: absolute;
     left: 0;
     top: 0;
+
+    font-size: 1.25vw;
+    
+    gap: 65vw;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.logo{
+    padding-left: 3vw;
+    font-size: 4vh;
+
+    transition: 0.5;
 }
 
 .inputs{
