--- a/contact.css
+++ b/contact.css
@@ -10,7 +10,7 @@ a{
     user-select: none;
 
     transition: 0.5s;
-    font-size: 2vh;
+    font-size: 1.25vw;
     text-transform: uppercase;
 }
 
