--- a/BigScreen.CSS
+++ b/BigScreen.CSS
@@ -283,6 +283,14 @@ a{
     margin-right: auto;
 }
 
+#Stand_Out{
+    color: antiquewhite;
+    background-color: rgba(255, 255, 255, 0.03);
+    border-radius: 1px;
+    border: 5px double rgba(255, 255, 255, 0.9);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 @keyframes gradientBg{
     0% { background-position: 0% 0%; }
     50% { background-position: 0% 95%; }
