--- a/contactsmall.css
+++ b/contactsmall.css
@@ -284,6 +284,15 @@ body{
     top: 10vh;
 }
 
+#Stand_Out{
+    color: antiquewhite;
+    background-color: rgba(255, 255, 255, 0.03);
+    border-radius: 1px;
+    border: 5px double rgba(255, 255, 255, 0.9);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 1vh;
+}
+
 @keyframes gradientBg{
     0% { background-position: 0% 0%; }
     50% { background-position: 0% 75%; }
